# test-task-bot

./: .gitignore  README.md  alembic.ini  pyproject.toml
tasks_ptb/: .env  bot.py  config.py  db.sqlite3  setup.cfg  template.py
tasks_ptb/db/: database.py  models.py
tasks_ptb/handlers/: __init__.py  add_task.py  all_tasks.py  delete_task.py  help.py  start.py  update_task.py
tasks_ptb/migrations/: env.py
tasks_ptb/migrations/versions/: 2024-10-19_init.py
tasks_ptb/schemas/: task_schemas.py  user_schemas.py
tasks_ptb/services/: task.py  user.py
tasks_ptb/templates/: add_description.j2  add_task_success  help.j2  start.j2  start_add.j2  task_incorrect_input.j2  task_list.j2  task_update_incorrect_input.j2
